fix: CORS에러 해결
스프링과 NGINX 둘 다에서 해주고 있었음 이래서 중복되서 에러난거였음 따라서 NGINX 없애줌